package job;

public interface Job {
    public String work();
}
